# monorepo

./: .gitignore  CLAUDE.md  PUBLISHING.md  README.md  agent-workflow.bpmn  agent.bpmn  agsub.bpmn  biome.json  decision.dmn  dmn-form.bpmn  ex.bpmn  form.form  kyc.bpmn  order-process.bpmn  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdk.md  tsconfig.base.json  tsconfig.json  turbo.json
.changeset/: all-moose-wear.md  beige-owls-ask.md  clever-terms-melt.md  config.json  early-bears-argue.md  early-ravens-peel.md  famous-mails-film.md  five-states-sniff.md  happy-hornets-raise.md  honest-berries-serve.md  large-streets-sniff.md  long-seas-sell.md  many-apes-fall.md  nine-ends-live.md  nine-masks-glow.md  polite-plums-fail.md  rare-plants-float.md  soft-guests-float.md  sweet-toes-lick.md  tasty-aliens-win.md  twelve-trees-visit.md  violet-rules-behave.md
.claude/: mcp.json
.swarm/: active-session
apps/proxy-rs/: Cargo.toml  build.rs
apps/proxy-rs/src/: lib.rs  main.rs  mcp_main.rs  mcp_server.rs
apps/reebe/: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.replica.yml  docker-compose.sqlite.yml  docker-compose.yml  justfile  package.json
apps/reebe/crates/reebe-api/: Cargo.toml
apps/reebe/crates/reebe-api/src/: app.rs  authorization.rs  error.rs  lib.rs  openapi.json  pagination.rs  tenant.rs  tests.rs
apps/reebe/crates/reebe-api/src/auth/: basic.rs  error.rs  middleware.rs  mod.rs  oidc.rs
apps/reebe/crates/reebe-api/src/dto/: deployments.rs  element_instances.rs  identity.rs  incidents.rs  jobs.rs  messages.rs  mod.rs  process_definitions.rs  process_instances.rs  signals.rs  system.rs  user_tasks.rs  variables.rs
apps/reebe/crates/reebe-api/src/handlers/: admin.rs  batch_operations.rs  clock.rs  decisions.rs  deployments.rs  element_instances.rs  expressions.rs  identity.rs  incidents.rs  jobs.rs  messages.rs  metrics.rs  mod.rs  openapi.rs  process_definitions.rs  process_instances.rs  resources.rs  signals.rs  statistics.rs  system.rs  user_tasks.rs  variables.rs
apps/reebe/crates/reebe-bench/: Cargo.toml
apps/reebe/crates/reebe-bench/src/: main.rs
apps/reebe/crates/reebe-bpmn/: Cargo.toml
apps/reebe/crates/reebe-bpmn/src/: lib.rs  model.rs  parser.rs  tests.rs  validator.rs
apps/reebe/crates/reebe-db/: Cargo.toml
apps/reebe/crates/reebe-db/migrations/: 001_partition_records.sql  002_key_state.sql  003_deployments.sql  004_process_instances.sql  005_jobs.sql  006_variables.sql  007_messages.sql  008_timers.sql  009_incidents.sql  010_user_tasks.sql  011_identity.sql  012_tenant_members.sql  013_batch_operations.sql  014_partition_records_partitioning.sql  015_jobs_retry_backoff.sql  016_signal_subscriptions.sql  017_gateway_tokens.sql  018_atomic_position.sql
apps/reebe/crates/reebe-db/migrations_sqlite/: 001_partition_records.sql  002_key_state.sql  003_deployments.sql  004_process_instances.sql  005_jobs.sql  006_variables.sql  007_messages.sql  008_timers.sql  009_incidents.sql  010_user_tasks.sql  011_identity.sql  012_tenant_members.sql  013_batch_operations.sql  014_partition_records_partitioning.sql  015_jobs_retry_backoff.sql  016_signal_subscriptions.sql  017_gateway_tokens.sql  018_atomic_position.sql
apps/reebe/crates/reebe-db/src/: backend.rs  compat.rs  error.rs  lib.rs  memory_backend.rs  pool.rs  records.rs  sqlx_backend.rs
apps/reebe/crates/reebe-db/src/state/: batch_operations.rs  deployments.rs  element_instances.rs  gateway_tokens.rs  identity.rs  incidents.rs  jobs.rs  messages.rs  mod.rs  process_instances.rs  signal_subscriptions.rs  timers.rs  user_tasks.rs  variables.rs
apps/reebe/crates/reebe-dmn/: Cargo.toml
apps/reebe/crates/reebe-dmn/src/: lib.rs
apps/reebe/crates/reebe-engine/: Cargo.toml
apps/reebe/crates/reebe-engine/benches/: throughput.rs
apps/reebe/crates/reebe-engine/src/: clock.rs  engine.rs  engine_integration_tests.rs  error.rs  job_notifier.rs  key_gen.rs  lib.rs  process_def_cache.rs  replay.rs  routing.rs  scheduler.rs  tests.rs
apps/reebe/crates/reebe-engine/src/processor/: bpmn_element.rs  deployment.rs  identity.rs  incident.rs  job.rs  message.rs  mod.rs  process_instance.rs  signal.rs  timer.rs  user_task.rs  variable.rs
apps/reebe/crates/reebe-engine/src/stream/: mod.rs
apps/reebe/crates/reebe-engine/tests/: compatibility.rs  integration.rs
apps/reebe/crates/reebe-feel/: Cargo.toml
apps/reebe/crates/reebe-feel/src/: ast.rs  builtins.rs  context.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs  types.rs
apps/reebe/crates/reebe-feel/tests/: feel_tests.rs
apps/reebe/crates/reebe-grpc/: Cargo.toml  build.rs
apps/reebe/crates/reebe-grpc/proto/: gateway.proto
apps/reebe/crates/reebe-grpc/src/: lib.rs  service.rs
apps/reebe/crates/reebe-protocol/: Cargo.toml
apps/reebe/crates/reebe-protocol/src/: error.rs  key.rs  lib.rs  record.rs  record_type.rs  tests.rs  value_type.rs
apps/reebe/crates/reebe-protocol/src/intent/: authorization.rs  decision.rs  deployment.rs  group.rs  incident.rs  job.rs  mapping_rule.rs  message.rs  mod.rs  process_instance.rs  role.rs  signal.rs  tenant.rs  timer.rs  user.rs  user_task.rs  variable.rs
apps/reebe/crates/reebe-protocol/src/value/: deployment.rs  incident.rs  job.rs  message.rs  mod.rs  process_instance.rs  signal.rs  timer.rs  user_task.rs  variable.rs
apps/reebe/crates/reebe-server/: Cargo.toml
apps/reebe/crates/reebe-server/src/: config.rs  main.rs
apps/reebe/crates/reebe-wasm/: Cargo.toml
apps/reebe/crates/reebe-wasm/src/: lib.rs
bpmn-samples/: newsletter-link-curator.bpmn  order-process.bpmn  parallel-approval.bpmn
doc/: aikit.md  automation-workflows.md  builder-experience.md  cli-plugin-system.md  features.md  progress.md  projects-files.md  reebe-copy-to-monorepo.md  reebe-wasm-integration.md  reebe-wasm-plan.md  reebe-wasm-roadmap.md  roadmap.md  studio-plan.md  studio-roadmap.md
examples/: Add or update Slack bookmark.bpmn  Create Infosec Asana task.bpmn  Epic Review Bot.bpmn  Fetch Collaborators.bpmn  Fetch Labels.bpmn  Github>Slack users.dmn  (+32 more)
(+368 files in other folders)
