[package]
name = "bpmn-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai-server"
path = "src/main.rs"

[[bin]]
name = "bpmn-mcp"
path = "src/mcp_main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
rquickjs = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio-stream = "0.1"
