[package]
name = "reebe-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "reebe-bench"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
