[package]
name = "reebe-bpmn"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BPMN 2.0 parser and model for the Reebe workflow engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
quick-xml = { version = "0.36", features = ["serialize"] }
bincode = { version = "1", optional = true }

[features]
serialization = ["bincode"]

[dev-dependencies]
