[package]
name = "reebe-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage layer for the Reebe workflow engine (PostgreSQL or SQLite)"

[features]
default = ["postgres"]
postgres = ["dep:sqlx", "dep:tokio", "sqlx/postgres"]
sqlite = ["dep:sqlx", "dep:tokio", "sqlx/sqlite"]
memory = []

[dependencies]
async-trait = { workspace = true }
# Optional: only compiled when postgres or sqlite feature is active.
# Kept optional so wasm32 builds (memory-only) avoid mio / OS socket deps.
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "uuid", "json", "macros"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
reebe-protocol = { path = "../reebe-protocol" }
