[package]
name = "reebe-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary entry point for the Reebe workflow engine server"

[[bin]]
name = "reebe-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
toml = "0.8"
reebe-protocol = { workspace = true }
reebe-engine = { workspace = true, default-features = false }
reebe-api = { workspace = true, default-features = false }
reebe-db = { workspace = true, default-features = false }
reebe-grpc = { path = "../reebe-grpc", default-features = false }
axum = { workspace = true }
directories = { workspace = true }

[features]
default = ["postgres"]
postgres = ["reebe-db/postgres", "reebe-engine/postgres", "reebe-api/postgres", "reebe-grpc/postgres"]
embedded = ["reebe-db/sqlite", "reebe-engine/sqlite", "reebe-api/sqlite", "reebe-grpc/sqlite"]
