[package]
name = "reebe-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly playground for the Reebe BPMN workflow engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
chrono = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["executor"] }
base64 = { workspace = true }
reebe-db = { workspace = true, default-features = false, features = ["memory"] }
reebe-engine = { workspace = true, default-features = false, features = ["memory"] }
# Provide a JS randomness source for uuid v4 generation in the browser
uuid = { workspace = true, features = ["js"] }

[features]
default = []
